kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparksbooks-server
  namespace: web
spec:
  selector:
    matchLabels:
      run: sparksbooks-server
  template:
    metadata:
      labels:
        run: sparksbooks-server
    spec:
      containers:
      - image: gcr.io/pdf-scanner-346920/sparksbook-app/sparksbooks-server:1c634af1ad6b24acd214b2cd269a0d72a3ff7261
        imagePullPolicy: IfNotPresent
        name: sparksbooks-server
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparksbooks-frontend
  namespace: web
spec:
  selector:
    matchLabels:
      run: sparksbooks-frontend
  template:
    metadata:
      labels:
        run: sparksbooks-frontend
    spec:
      containers:
      - image: gcr.io/pdf-scanner-346920/sparksbook-app/sparksbooks-frontend:1c634af1ad6b24acd214b2cd269a0d72a3ff7261
        imagePullPolicy: IfNotPresent
        name: sparksbooks-server
        ports:
        - containerPort: 8081
          protocol: TCP
